fixing background on tablets, adding breakpoints

--- a/src/components/SearchArea.module.scss
+++ b/src/components/SearchArea.module.scss
@@ -38,7 +38,7 @@
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
 
-    @media screen and (max-device-width: 769px){
+    @media screen and (max-device-width: $tablet){
       font-size: 1.5em;
       gap: 0.8em;
     }
