--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @use "./styles" as *;
 
+
 html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,16 +10,21 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.025vw;
   line-height: 1.2;
+  background: url("./image/lake.jpg") center no-repeat;
+  background-size: cover;
 
-  @media screen and (max-device-width: 1025px){
+
+  @media screen and (max-device-width: $notepad){
     font-size: 1.5vw;
   }
 
-  @media screen and (max-device-width: 769px){
+  @media screen and (max-device-width: $tablet){
     font-size: 2.2vw;
+    background: url("./image/lake.jpg") top no-repeat;
+    background-size: auto 120%;
   }
 
-  @media screen and (max-device-width: 481px){
+  @media screen and (max-device-width: $mobile){
     font-size: 2.7vw;
   }
 }
@@ -36,16 +42,14 @@ code {
 
 .app {
   @include commonBlock($justify: center);
-  min-height: 100vh;
-  padding: 0 25%;
-  background: url("./image/lake.jpg") center no-repeat;
+  padding: 1.5% 25%;
 
-  @media screen and (max-device-width: 769px){
-    padding: 0 15%;
+  @media screen and (max-device-width: $tablet){
+    padding: 2.5% 15%;
   }
 
-  @media screen and (max-device-width: 481px){
-    padding: 0 5%;
+  @media screen and (max-device-width: $mobile){
+    padding: 2.5% 5%;
   }
 
 }
@@ -55,12 +59,12 @@ code {
     border-radius: 30px;
     color: $standartFontColor;
     padding: 5%;
-    min-height: 90vh;
+    min-height: 93vh;
 
-    @media screen and (max-device-width: 769px){
+
+    @media screen and (max-device-width: $tablet){
       min-height: 85vh;
     }
-
   }
 
   .header {
@@ -85,7 +89,7 @@ code {
     @include commonBlock;
     gap: 2em;
 
-    @media screen and (max-device-width: 769px){
+    @media screen and (max-device-width: $tablet){
       gap: 6em;
     }
   }
